feat: turn movie card into button

--- a/src/styles/movie-card.scss
+++ b/src/styles/movie-card.scss
@@ -1,5 +1,14 @@
 .movie-card {
   position: relative;
+  padding: 0; 
+
+  &:first-child {
+    margin-top: 1rem;
+  }
+
+  &:hover {
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
+  }
 
   img {
     width: 14.31rem;
