--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -11,15 +11,15 @@
     display: block;
 
     &__modal {
-        width: 700px;
-        height: 500px;
+        width: 70%;
+        height: 70%;
         padding: 2rem;
         position: absolute;
-        background: var(--white);
+        background: var(--background);
         background-clip: padding-box;
         box-shadow: 0px 3px 6px #00000029;
         margin: auto;
-        border-radius: 4px;
+        border-radius: 8px;
         margin: 0;
         top: 50%;
         left: 50%;
@@ -69,27 +69,15 @@
 
         &__description {
             p {
-                font-family: Heebo;
+                font-family: "Poppins";
                 font-weight: 400;
-                font-size: 12px;
+                font-size: 1rem;
                 line-height: 20px;
                 color: var(--gray-400);
                 margin-top: -5px;
                 overflow: auto;
                 height: 70px;
-                text-indent: 20px;
-
-                &::before {
-                    content: "";
-                    //background: url('/images/quotes.png');
-                    background-size: 12px;
-                    display: block;
-                    background-repeat: no-repeat;
-                    height: 12px;
-                    width: 12px;
-                    position: absolute;
-                    margin-top: 4px;
-                }
+                line-height: 23px;
             }
         }
 
@@ -97,8 +85,8 @@
             padding: 20px;
 
             img {
-                height: 400px;
-                width: 300px;
+                height: 360px;
+                width: 270px;
                 filter: drop-shadow(0px 12px 18px rgba(0, 0, 0, 0.3));
 
                 @media screen and (max-width: 768px) {
@@ -109,14 +97,14 @@
         }
 
         &__details {
-            padding: 0 0 0 30px;
+            padding: 20px;
 
             @media screen and (max-width: 768px) {
                 padding: 0 0 0 10px;
             }
 
             h1 {
-                font-family: Heebo;
+                font-family: "Poppins";
                 font-size: 28px;
                 color: var(--gray-800);
                 line-height: 30px;
@@ -124,7 +112,7 @@
             }
 
             small {
-                font-family: Heebo;
+                font-family: "Poppins";
                 font-weight: 400;
                 color: var(--main);
                 font-size: 12px;
@@ -132,35 +120,26 @@
             }
 
             h2 {
-                font-family: Heebo;
+                font-family: "Poppins";
                 font-weight: 500;
-                font-size: 12px;
+                font-size: 1rem;
                 line-height: 28.5px;
             }
 
-            .summary {
-                display: flex;
-                gap: 125px;
+            .summaryContainer {
+                margin-top: 20px;
+                display: grid;
+                grid-template-columns: 170px 1fr;
+                column-gap: 10px;
+                row-gap: 5px;
+            }
 
-                @media screen and (max-width: 768px) {
-                    gap: 100px;
-                }
+            footer {
+                margin-top: 20px;
 
-                &__index {
-                    font-family: Heebo;
-                    font-weight: 500;
-                    font-size: 12px;
-                    line-height: 20px;
-                    color: var(--gray-800);
-                }
-                
-                &__info {
-                    text-align: right;
-                    font-family: Heebo;
-                    font-weight: 400;
-                    font-size: 12px;
-                    line-height: 20px;
-                    color: var(--gray-400);
+                h2 {
+                    margin-bottom: 10px;
+                    font-weight: bold;
                 }
             }
         }
