--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -42,21 +42,12 @@
     }
 
     &__closeModal {
-        height: 30px;
-        width: 30px;
-        border-radius: 50%;
-        border: none;
-        background-color: var(--white);
-        //background-image: url('/images/close.png');
-        background-size: 10px;
-        background-position: center;
-        background-repeat: no-repeat;
         position: absolute;
-        right: 0;
-        top: 0;
-        margin-top: 15px;
-        margin-right: 15px;
-        cursor: pointer;
+        top: 130px;
+        background: none;
+        right: 230px;
+        z-index: 1;
+        border: none;
     }
 
     .bookInfo {
