--- a/src/styles/movie-card.scss
+++ b/src/styles/movie-card.scss
@@ -1,9 +1,9 @@
 .movie-card {
   position: relative;
-  padding: 0; 
+  padding: 0 !important; 
 
   &:first-child {
-    margin-top: 1rem;
+    margin-top: 1rem !important;
   }
 
   &:hover {
