--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,3 +27,34 @@ input, textarea {
 button {
   cursor: pointer;
 }
+
+.loadingBackDrop {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  background: #696969;
+
+  &__gif {
+    border: 9px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 9px solid var(--yellow);
+    width: 60px;
+    height: 60px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 0.7s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+}
